--- a/src/app/bookingmanagment/bookingmanagment.component.css
+++ b/src/app/bookingmanagment/bookingmanagment.component.css
@@ -44,13 +44,13 @@ th, td {
 }
 
 th {
-  color: rgb(20, 16, 209);
+  color: rgb(20, 16, 209) !important;
   text-align: center;
   padding: 0px 1px;
 }
 
 tr:hover {
-  background-color: #F3FDE8;
+  background-color: #eceaea;
 }
 
 .service-list th {
@@ -100,11 +100,11 @@ button:hover {
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 20px;
+  padding: 10px;
   width: 360px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1; /* Ensure the form appears above other content */
-  transform: translate(-50%, 0);
+  transform: translate(-70%, 0);
 }
 
 .edit label {
@@ -132,165 +132,3 @@ button:hover {
 .edit button:hover {
   background-color: #0056b3;
 }
-
-
-/*h2 {*/
-/*  margin-top: 80px;*/
-/*  margin-right:650px;*/
-/*  margin-bottom: 0px; !* Adjust this value as needed *!*/
-/*  text-align: center;  !* Center align the header *!*/
-/*}*/
-
-/*.small-search-bar {*/
-/*  margin-top: -20px;*/
-/*  margin-left:760px;*/
-/*  padding: 8px;*/
-/*  font-size: 12px;*/
-/*  width: 250px;*/
-/*  !* Set the width of the search bar *!*/
-/*  height: 30px;*/
-/*  font-size: 14px;*/
-/*  !* background-color: rgb(236, 241, 245); *!*/
-/*  color: rgb(14, 13, 13);*/
-/*  border-radius: 10px;*/
-/*  position: relative;*/
-/*  left: 290px;*/
-/*  bottom: 20px;*/
-/*  border: 2px solid rgb(154, 213, 235);*/
-/*}*/
-
-/*table {*/
-/*  width: 70%;*/
-/*  border-collapse: collapse;*/
-/*  margin: 100px;*/
-/*  margin-left: 300px;*/
-/*  margin-top:10px;*/
-/*}*/
-
-/*th,*/
-/*td {*/
-/*  padding: 6px;*/
-/*  text-align: left;*/
-/*  border: 1px solid #080808;*/
-/*  font-family: Verdana, Geneva, Tahoma, sans-serif;*/
-/*}*/
-
-/*th {*/
-/*  color: rgb(4, 15, 5);*/
-/*  text-align: center;*/
-/*  padding: 0px 1px;*/
-
-/*}*/
-
-/*tr:hover {*/
-/*  background-color: #F3FDE8;*/
-/*  !* border: 2px solid blueviolet; *!*/
-
-/*}*/
-
-/*.dd {*/
-/*  background-color: white;*/
-/*  font-family: Verdana, Geneva, Tahoma, sans-serif;*/
-/*  color: rgb(15, 15, 17);*/
-
-/*}*/
-
-
-/*!* thead {*/
-/*  border-bottom: 2px solid black; !* Adjust the color and thickness of the line as needed *!*/
-/*!* } *!*/
-/*!**/
-/*tr:nth-child(even) {*/
-/*  background-color: #161515;*/
-/*} *!*/
-
-/*!* Remove background-color and adjust border properties for minimal lines *!*/
-/*th,*/
-/*td {*/
-/*  background-color: transparent;*/
-/*}*/
-
-/*tr {*/
-/*  background-color: transparent;*/
-/*}*/
-
-
-
-
-/*!* app.component.css *!*/
-
-
-/*table td:nth-child(6) {*/
-/*  padding: 0px 50px;*/
-/*}*/
-
-
-
-/*table td {*/
-/*  text-align: center;*/
-/*}*/
-
-/*!*!* Styles for the clickable button icons *!*!*/
-/*button {*/
-/*  background-color: transparent;*/
-/*  border: none;*/
-/*  cursor: pointer;*/
-/*  font-size: 1.2em;*/
-/*  margin-right: 5px;*/
-/*}*/
-
-/*button:hover {*/
-/*  color: palevioletred;*/
-/*}*/
-
-
-
-
-/*.edit {*/
-/*  background-color: #fff;*/
-/*  border: 1px solid #ccc;*/
-/*  border-radius: 5px;*/
-/*  padding: 20px;*/
-/*  width: 360px;*/
-/*  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
-/*  z-index: 1; !* Ensure the form appears above other content *!*/
-/*  transform: translate(-50%, 0);*/
-/*}*/
-
-
-
-
-
-/*.edit label {*/
-/*  display: block;*/
-/*  margin-bottom: 20px;*/
-/*}*/
-
-/*.edit input {*/
-/*  width: 100%;*/
-/*  padding: 8px;*/
-/*  margin-bottom: 10px;*/
-/*  border: 1px solid #ccc;*/
-/*  border-radius: 3px;*/
-/*}*/
-
-/*.edit select{*/
-/*  width: 100%;*/
-/*  padding: 8px;*/
-/*  margin-bottom: 10px;*/
-/*  border: 1px solid #ccc;*/
-/*  border-radius: 3px;*/
-/*}*/
-
-/*.edit button {*/
-/*  background-color: #007bff;*/
-/*  color: #fff;*/
-/*  padding: 10px 20px;*/
-/*  border: none;*/
-/*  border-radius: 3px;*/
-/*  cursor: pointer;*/
-/*}*/
-
-/*.edit button:hover {*/
-/*  background-color: #0056b3;*/
-/*}*/
